tests/baselines/reference/objectLitStructuralTypeMismatch.errors.txt
objectLitStructuralTypeMismatch.ts(2,27): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.


==== objectLitStructuralTypeMismatch.ts (1 errors) ====
    // Shouldn't compile
    var x: { a: number; } = { b: 5 };
                              ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.